--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,31 @@ ul {
   justify-content: center;
 }
 
+ul li {
+  margin-right: 10px;
+}
+
+nav button {
+  background-color: yellow;
+  color: rgba(255, 0, 85, 0.422);
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+  font-weight: bold;
+}
+
+nav button:hover {
+  background-color: #ff4e0364;
+}
+
+nav button:disabled {
+  background-color: #ddd;
+  cursor: not-allowed;
+}
+
 button {
   background-color: pink;
   color: rgb(253, 253, 253);
@@ -94,6 +119,21 @@ a:hover {
 
 .task-actions {
   margin-top: 10px;
+}
+
+.task-actions button {
+  background-color: yellow;
+  color: rgba(255, 0, 85, 0.422);
+  font-weight: bolder;
+  padding: 10px 15px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.task-actions button:hover {
+  background-color: #ffbc00;
 }
 
 button {
